medication log dynamically extracted, api completed and integrated into frontend